# MNIST-AI-Without-External-AI-Libraries

./: .gitignore  CMakeLists.txt  README.md
include/NumCpp/: Functions.hpp
include/NumCpp/Core/Internal/: Version.hpp
include/NumCpp/Filter/Filters/Filters1d/: rankFilter1d.hpp
include/NumCpp/NdArray/: NdArrayCore.hpp
include/NumCpp/Random/: generator.hpp
src/: DatasetLoader.hpp  Logger.hpp  Main.cpp  Network.hpp  Util.hpp
